--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -47,6 +47,37 @@
     "y_VL3 = [2.613, 2.575, 2.538, 2.463, 2.350, 2.238, 2.125, 2.013, 1.863]\n",
     "y_VL1 = [2.075, 2.050, 2.025, 1.975, 1.900, 1.825, 1.750, 1.675, 1.575]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lagrange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Polinomio de Lagrange\n",
+    "pSL2 = lagrange(x,y_SL2)\n",
+    "pSL3 = lagrange(x,y_SL3)\n",
+    "pSL1 = lagrange(x,y_SL1)\n",
+    "pVL2 = lagrange(x,y_VL2)\n",
+    "pVL3 = lagrange(x,y_VL3)\n",
+    "pVL1 = lagrange(x,y_VL1)\n",
+    "\n",
+    "# Evaluar polinomio obtenido en un intervalo de [20,180].\n",
+    "x1 = np.linspace(20,180,100)\n",
+    "y1 = pSL2(x1)\n",
+    "y2 = pSL3(x1)\n",
+    "y3 = pSL1(x1)\n",
+    "y4 = pVL2(x1)\n",
+    "y5 = pVL3(x1)\n",
+    "y6 = pVL1(x1)"
+   ]
   }
  ],
  "metadata": {
