Valores de interpolación en 30° y 50°

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -124,6 +124,41 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Valores en x(30) y x(55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor interpolado para x(30) = 1.622, y x(55) = 0.905\n",
+      "El valor interpolado para x(30) = 3.869, y x(55) = 3.969\n",
+      "El valor interpolado para x(30) = 2.913, y x(55) = 2.979\n",
+      "El valor interpolado para x(30) = 1.296, y x(55) = 0.722\n",
+      "El valor interpolado para x(30) = 2.548, y x(55) = 2.600\n",
+      "El valor interpolado para x(30) = 2.032, y x(55) = 2.066\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Valores de interpolación en x(30) y x(55)\n",
+    "print(f\"El valor interpolado para x(30) = {pSL2(55):.3f}, y x(55) = {pSL2(30):.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {pSL3(55):.3f}, y x(55) = {pSL3(30):.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {pSL1(55):.3f}, y x(55) = {pSL1(30):.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {pVL2(55):.3f}, y x(55) = {pVL2(30):.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {pVL3(55):.3f}, y x(55) = {pVL3(30):.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {pVL1(55):.3f}, y x(55) = {pVL1(30):.3f}\")"
+   ]
   }
  ],
  "metadata": {
