--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -159,6 +159,47 @@
     "print(f\"El valor interpolado para x(30) = {pVL3(55):.3f}, y x(55) = {pVL3(30):.3f}\")\n",
     "print(f\"El valor interpolado para x(30) = {pVL1(55):.3f}, y x(55) = {pVL1(30):.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valor a interpolar\n",
+    "x_interpolar1 = 30\n",
+    "x_interpolar2 = 55\n",
+    "\n",
+    "# Realizar la interpolación\n",
+    "interSL2 = np.interp(x_interpolar1, x, y_SL2)\n",
+    "interSL3 = np.interp(x_interpolar1, x, y_SL3)\n",
+    "interSL1 = np.interp(x_interpolar1, x, y_SL1)\n",
+    "interVL2 = np.interp(x_interpolar1, x, y_VL2)\n",
+    "interVL3 = np.interp(x_interpolar1, x, y_VL3)\n",
+    "interVL1 = np.interp(x_interpolar1, x, y_VL1)\n",
+    "inter_SL2 = np.interp(x_interpolar2, x, y_SL2)\n",
+    "inter_SL3 = np.interp(x_interpolar2, x, y_SL3)\n",
+    "inter_SL1 = np.interp(x_interpolar2, x, y_SL1)\n",
+    "inter_VL2 = np.interp(x_interpolar2, x, y_VL2)\n",
+    "inter_VL3 = np.interp(x_interpolar2, x, y_VL3)\n",
+    "inter_VL1 = np.interp(x_interpolar2, x, y_VL1)\n",
+    "\n",
+    "# Evaluar polinomio obtenido en un intervalo de [20,180].\n",
+    "x1 = np.linspace(20,180,100)\n",
+    "ya = np.interp(x1, x, y_SL2)\n",
+    "yb = np.interp(x1, x, y_SL3)\n",
+    "yc = np.interp(x1, x, y_SL1)\n",
+    "yd = np.interp(x1, x, y_VL2)\n",
+    "ye = np.interp(x1, x, y_VL3)\n",
+    "yf = np.interp(x1, x, y_VL1)"
+   ]
   }
  ],
  "metadata": {
