Valores de interpolación en 30° y 50°

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -246,6 +246,40 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Valores en x(30) y x(55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor interpolado para x(30) = 0.897, y x(55) = 1.620\n",
+      "El valor interpolado para x(30) = 3.944, y x(55) = 3.869\n",
+      "El valor interpolado para x(30) = 2.963, y x(55) = 2.913\n",
+      "El valor interpolado para x(30) = 0.715, y x(55) = 1.296\n",
+      "El valor interpolado para x(30) = 2.594, y x(55) = 2.547\n",
+      "El valor interpolado para x(30) = 2.062, y x(55) = 2.031\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"El valor interpolado para x(30) = {interSL2:.3f}, y x(55) = {inter_SL2:.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {interSL3:.3f}, y x(55) = {inter_SL3:.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {interSL1:.3f}, y x(55) = {inter_SL1:.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {interVL2:.3f}, y x(55) = {inter_VL2:.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {interVL3:.3f}, y x(55) = {inter_VL3:.3f}\")\n",
+    "print(f\"El valor interpolado para x(30) = {interVL1:.3f}, y x(55) = {inter_VL1:.3f}\")"
+   ]
   }
  ],
  "metadata": {
