Calculo de las dimensiones

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -280,6 +280,84 @@
     "print(f\"El valor interpolado para x(30) = {interVL3:.3f}, y x(55) = {inter_VL3:.3f}\")\n",
     "print(f\"El valor interpolado para x(30) = {interVL1:.3f}, y x(55) = {inter_VL1:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dimensiones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calcular dimensiones para 30° con Lagrange\n",
+    "#Rectitud\n",
+    "dx = 20\n",
+    "L2S = dx/pSL2(30)\n",
+    "L3S = pSL3(30) * L2S\n",
+    "L1S = pSL1(30) * L2S\n",
+    "L4S = L3S\n",
+    "\n",
+    "#Velocidad\n",
+    "L2V = dx/pVL2(30)\n",
+    "L3V = pVL3(30) * L2V\n",
+    "L1V = pVL1(30) * L2V\n",
+    "L4V = L3V\n",
+    "\n",
+    "#Calcular las dimensiones para 55°\n",
+    "\n",
+    "#Rectitud\n",
+    "dx = 20\n",
+    "L2S_ = dx/pSL2(55)\n",
+    "L3S_ = pSL3(55) * L2S_\n",
+    "L1S_ = pSL1(55) * L2S_\n",
+    "L4S_ = L3S_\n",
+    "\n",
+    "#Velocidad\n",
+    "L2V_ = dx/pVL2(55)\n",
+    "L3V_ = pVL3(55) * L2V_\n",
+    "L1V_ = pVL1(55) * L2V_\n",
+    "L4V_ = L3V_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calcular dimensiones para 30° con Numpy\n",
+    "#Rectitud\n",
+    "dx = 20\n",
+    "L2_S = dx/np.interp(30, x,y_SL2)\n",
+    "L3_S = np.interp(30, x,y_SL3) * L2_S\n",
+    "L1_S = np.interp(30, x,y_SL1) * L2_S\n",
+    "L4_S = L3_S\n",
+    "\n",
+    "#Velocidad\n",
+    "L2_V = dx/np.interp(30, x, y_VL2)\n",
+    "L3_V = np.interp(30, x, y_VL3) * L2_V\n",
+    "L1_V = np.interp(30, x, y_VL1)* L2_V\n",
+    "L4_V = L3_V\n",
+    "\n",
+    "#Calcular las dimensiones para 55°\n",
+    "\n",
+    "#Rectitud\n",
+    "L_2S = dx/np.interp(55, x,y_SL2)\n",
+    "L_3S = np.interp(55, x,y_SL3) * L_2S\n",
+    "L_1S = np.interp(55, x,y_SL1) * L_2S\n",
+    "L_4S = L_3S\n",
+    "\n",
+    "#Velocidad\n",
+    "L_2V = dx/np.interp(55, x, y_VL2)\n",
+    "L_3V = np.interp(55, x, y_VL3) * L_2V\n",
+    "L_1V = np.interp(55, x, y_VL1) * L_2V\n",
+    "L_4V = L_3V"
+   ]
   }
  ],
  "metadata": {
