Resultado de las dimensiones

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -358,6 +358,48 @@
     "L_1V = np.interp(55, x, y_VL1) * L_2V\n",
     "L_4V = L_3V"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensiones para rectitud y velocidad para 30° con Lagrange \n",
+      "Las dimensiones para 30° de L1 = 65.85865974829598, L2 = 22.11056130852223, L3 = 87.75099397322296, L4 = 87.75099397322296\n",
+      "Las dimensiones para 30° de L1 = 57.21942641174523, L2 = 27.692087447433437, L3 = 72.00930145847735, L4 = 72.00930145847735\n",
+      "Dimensiones para rectitud y velocidad para 55° con Lagrange\n",
+      "Las dimensiones para 55° de L1 = 35.90859898892062, L2 = 12.32780253947045, L3 = 47.69698364576915, L4 = 47.69698364576915\n",
+      "Las dimensiones para 55° de L1 = 31.34938092875953, L2 = 15.427047245800924, L3 = 39.31439124861217, L4 = 39.31439124861217\n",
+      "Dimensiones para rectitud y velocidad para 30° con Numpy\n",
+      "Las dimensiones para 30° de L1 = 66.05351170568562, L2 = 22.29654403567447, L3 = 87.93756967670011, L4 = 87.93756967670011\n",
+      "Las dimensiones para 30° de L1 = 57.69230769230769, L2 = 27.972027972027973, L3 = 72.55944055944057, L4 = 72.55944055944057\n",
+      "Dimensiones para rectitud y velocidad para 55° con Numpy\n",
+      "Las dimensiones para 55° de L1 = 35.9456957729096, L2 = 12.341869793273682, L3 = 47.74760876272756, L4 = 47.74760876272756\n",
+      "Las dimensiones para 55° de L1 = 31.352498552961606, L2 = 15.435076210688791, L3 = 39.316997877677025, L4 = 39.316997877677025\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dimensiones para rectitud y velocidad para 30° con Lagrange \")\n",
+    "print(f\"Las dimensiones para 30° de L1 = {L1S}, L2 = {L2S}, L3 = {L3S}, L4 = {L4S}\")\n",
+    "print(f\"Las dimensiones para 30° de L1 = {L1V}, L2 = {L2V}, L3 = {L3V}, L4 = {L4V}\")\n",
+    "\n",
+    "print(\"Dimensiones para rectitud y velocidad para 55° con Lagrange\")\n",
+    "print(f\"Las dimensiones para 55° de L1 = {L1S_}, L2 = {L2S_}, L3 = {L3S_}, L4 = {L4S_}\")\n",
+    "print(f\"Las dimensiones para 55° de L1 = {L1V_}, L2 = {L2V_}, L3 = {L3V_}, L4 = {L4V_}\")\n",
+    "\n",
+    "print(\"Dimensiones para rectitud y velocidad para 30° con Numpy\")\n",
+    "print(f\"Las dimensiones para 30° de L1 = {L1_S}, L2 = {L2_S}, L3 = {L3_S}, L4 = {L4_S}\")\n",
+    "print(f\"Las dimensiones para 30° de L1 = {L1_V}, L2 = {L2_V}, L3 = {L3_V}, L4 = {L4_V}\")\n",
+    "\n",
+    "print(\"Dimensiones para rectitud y velocidad para 55° con Numpy\")\n",
+    "print(f\"Las dimensiones para 55° de L1 = {L_1S}, L2 = {L_2S}, L3 = {L_3S}, L4 = {L_4S}\")\n",
+    "print(f\"Las dimensiones para 55° de L1 = {L_1V}, L2 = {L_2V}, L3 = {L_3V}, L4 = {L_4V}\")"
+   ]
   }
  ],
  "metadata": {
