Conclusiones de la actividad

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -400,6 +400,14 @@
     "print(f\"Las dimensiones para 55° de L1 = {L_1S}, L2 = {L_2S}, L3 = {L_3S}, L4 = {L_4S}\")\n",
     "print(f\"Las dimensiones para 55° de L1 = {L_1V}, L2 = {L_2V}, L3 = {L_3V}, L4 = {L_4V}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Conclusiones**\n",
+    "Teniendo en cuenta los resultados que nos arrojan los métodos de Lagrange y Numpy, es posible concluir que el método que mejor se ajusta a los datos es el método de Lagrange, teniendo en cuenta que este refleja mejor las variaciones en los datos y sus tendencias."
+   ]
   }
  ],
  "metadata": {
