Planteamiento del problema

--- a/Actividad_interpolacion.ipynb
+++ b/Actividad_interpolacion.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Planteamiento del problema:**\n",
+    "La actividad aborda la necesidad de perfeccionar el diseño de mecanismos de cuatro barras para simular trayectorias rectas. Aunque estos mecanismos naturalmente no logran una rectitud perfecta, el objetivo es crear un algoritmo de interpolación que aproxime esta trayectoria lo más posible, manteniendo una velocidad constante. Este desafío combina teoría mecánica con aplicaciones prácticas, buscando un equilibrio entre las limitaciones estructurales y los requisitos de diseño para aplicaciones industriales, mejorando así la eficiencia y precisión de los mecanismos en cuestión."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Interpolación"
    ]
   },
